# kotoba-no-kizuna

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: reset-dev-db.sh
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init_schema.sql  002_gacha_economy.sql  003_relationship_depth.sql  004_vocab_dictionary.sql  005_abilities.sql
src-tauri/src/: main.rs
src-tauri/src/ai/: client.rs
src-tauri/src/nlp/: analyzer.rs
src/core/types/: companion.ts  database.ts
src/data/: abilities.ts  commissions.ts  companions.ts  gachaBanner.ts
src/features/abilities/components/: AbilitiesPanel.tsx
src/features/chat/components/: ChatPanel.tsx  RelationshipBars.tsx
src/features/chat/hooks/: useCompanionChat.ts
src/features/commissions/components/: CommissionsPanel.tsx
src/features/gacha/components/: GachaScreen.tsx
src/features/language-engine/components/: DevSandbox.tsx
src/features/language-engine/hooks/: useNlpTokenizer.ts
src/features/language-engine/utils/: srsAlgorithm.ts
src/features/srs/components/: ReviewSession.tsx
src/lib/: abilityUnlocks.ts  companionStatus.ts  db.ts  gacha.ts  relationship.ts
src/store/: useBoundStore.ts
src/store/slices/: createChatSlice.ts  createCommissionsSlice.ts  createCompanionSlice.ts  createProfileSlice.ts  createSrsSlice.ts  createUiSlice.ts  createVocabDictionarySlice.ts
