[package]
name = "kotoba-no-kizuna"
version = "0.1.0"
description = "Kotoba no Kizuna - AI Companion Language Learning"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
lindera-tokenizer = { version = "0.34.0", features = ["ipadic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
